newcfdemo/CFdemo_gene_text_copy/test_training2.log
Traceback (most recent call last):
  File "main.py", line 11, in <module>
    from utils.core_utils import _train_val, _train_val_with_km_plots
  File "/root/autodl-tmp/newcfdemo/CFdemo_gene_text_copy/utils/core_utils.py", line 987
    Args:
        ^
SyntaxError: invalid syntax
